# HCAddon

./: .copier-answers.yml  LICENSE  README.md  build.gradle.kts  gradle.properties  pyproject.toml  settings.gradle.kts
.github/workflows/: release.yml
Common/: build.gradle.kts
Common/src/main/java/io/github/custom_coder/hcaddon/mixin/: HcaddonMixinConfigPlugin.java  MixinDatagenMain.java
Common/src/main/kotlin/io/github/custom_coder/hcaddon/: Hcaddon.kt  HcaddonAbstractions.kt  HcaddonClient.kt
Common/src/main/kotlin/io/github/custom_coder/hcaddon/casting/actions/spells/: OpCongratulate.kt
Common/src/main/kotlin/io/github/custom_coder/hcaddon/config/: HcaddonClientConfig.kt  HcaddonServerConfig.kt
Common/src/main/kotlin/io/github/custom_coder/hcaddon/datagen/: HcaddonActionTags.kt
Common/src/main/kotlin/io/github/custom_coder/hcaddon/networking/: HcaddonNetworking.kt
Common/src/main/kotlin/io/github/custom_coder/hcaddon/networking/handler/: ClientMessageHandler.kt  ServerMessageHandler.kt
Common/src/main/kotlin/io/github/custom_coder/hcaddon/networking/msg/: HcaddonMessage.kt  MsgSyncConfigS2C.kt
Common/src/main/kotlin/io/github/custom_coder/hcaddon/registry/: HcaddonActions.kt  HcaddonRegistrar.kt
Common/src/main/resources/: architectury.common.json  hcaddon-common.mixins.json
Common/src/main/resources/assets/hcaddon/lang/: en_us.flatten.json5
Common/src/main/resources/assets/hexcasting/patchouli_books/thehexbook/en_us/entries/patterns/great_spells/: dummy_great_spells.json5
Common/src/main/resources/assets/hexcasting/patchouli_books/thehexbook/en_us/entries/patterns/spells/: dummy_spells.json5
Fabric/: build.gradle.kts
Fabric/src/main/kotlin/io/github/custom_coder/hcaddon/fabric/: FabricHcaddon.kt  FabricHcaddonClient.kt  FabricHcaddonModMenu.kt  FabricHcaddonServer.kt  HcaddonAbstractionsImpl.kt
Fabric/src/main/kotlin/io/github/custom_coder/hcaddon/fabric/datagen/: FabricHcaddonDatagen.kt
Fabric/src/main/resources/: fabric.mod.json  hcaddon-fabric.mixins.json
Forge/: build.gradle.kts
Forge/src/main/kotlin/io/github/custom_coder/hcaddon/forge/: ForgeHcaddon.kt  ForgeHcaddonClient.kt  ForgeHcaddonServer.kt  HcaddonAbstractionsImpl.kt
Forge/src/main/kotlin/io/github/custom_coder/hcaddon/forge/datagen/: ForgeHcaddonDatagen.kt
Forge/src/main/resources/: hcaddon-forge.mixins.json  pack.mcmeta
buildSrc/src/main/kotlin/hcaddon/: java.gradle.kts  minecraft.gradle.kts  mod-publish.gradle.kts  platform.gradle.kts
buildSrc/src/main/kotlin/hcaddon/utils/: mod-dependencies.gradle.kts
doc/: README.md  hexdoc.toml
doc/resources/assets/hcaddon/lang/: en_us.flatten.json5
doc/src/hexdoc_hcaddon/: _hooks.py
